Update OrderResultContainer.java
- wont compile